--- a/templates/basic.html
+++ b/templates/basic.html
@@ -127,7 +127,7 @@ SKYPE: <strong style="margin: 0;padding: 0;font-family: &quot;Helvetica Neue&quo
                         <table style="margin: 0;padding: 0;font-family: &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;width: 100%;">
                             <tr style="margin: 0;padding: 0;font-family: &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
                                 <td align="center" style="margin: 0;padding: 0;font-family: &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
-                                    <p style="margin: 0;padding: 0;font-family: &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;margin-bottom: 10px;font-weight: normal;font-size: 14px;line-height: 1.6;">Copyright © 2013 AllbrandsUSA | 3319 NW 74th Avenue - Miami, FL 33122
+                                    <p style="margin: 0;padding: 0;font-family: &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;margin-bottom: 10px;font-weight: normal;font-size: 14px;line-height: 1.6;">Copyrinnmmnmght © 2013 AllbrandsUSA | 3319 NW 74th Avenue - Miami, FL 33122
                                     </p>
                                 </td>
                             </tr>
